--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,6 +20,9 @@ layout: default
           <a class="post-link" href="{{ post.url | relative_url }}">
             {{ post.title | escape }}
           </a>
+          {%- for category in post.categories -%}
+            <sp> {{ category }} </sp>
+          {%- endfor -%}
         </h3>
           {{ post.excerpt }}
         
