--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,35 +1,74 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="{{ site.lang | default: "en-US" }}">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<div class="home">
-  {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
-  {%- endif -%}
-
-  {{ content }}
-
-  {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "" }}</h2>
-    <ul class="post-list">
-      {%- for post in site.posts -%}
-      <li>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        <h3>
-          <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
-          </a>
-          {%- for category in post.categories -%}
-            <sp> {{ category }} </sp>
-          {%- endfor -%}
-        </h3>
-          {{ post.excerpt }}
+{% seo %}
+    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <!--[if lt IE 9]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
-      </li>
-      {%- endfor -%}
-    </ul>
+        {% if site.logo %}
+          <img id="logo" src="{{site.logo | relative_url}}" alt="Logo" />
+        {% endif %}
 
-    {%- endif -%}
+        <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-</div>
+        {% if site.github.is_project_page %}
+        <p class="view"><a href="{{ site.github.owner_url }}">Find me on GitHub <small>{{ site.github.owner_name }}</small></a></p>
+        {% endif %}
+       
+       <p class="view"><a href="">Find me on Linkedin <small>Shanique Richards</small></a></p>
+
+        
+        </header>
+      <section>
+       <h1> Blog Posts </h1>
+       <hr>
+       {% for post in site.posts %}
+         {%- assign date_format = "%b %-d, %Y" -%}
+        <span>{{ post.date | date: date_format }}</span>
+        
+        <h2><a href="{{ post.url | absolute_url }}" >{{post.title}}</a></h2>
+        <sp> Tags: </sp>
+         {% for category in post.categories %}
+          <sp> {{category}} </sp>
+                    
+        {% endfor %}
+        <br>
+        <p> {{post.excerpt }} </p>
+        <br><hr> 
+       {% endfor %}
+       
+      
+      {{ content }}
+
+      </section>
+      <footer>
+        {% if site.github.is_project_page %}
+        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        {% endif %}
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+    {% if site.google_analytics %}
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', '{{ site.google_analytics }}', 'auto');
+      ga('send', 'pageview');
+    </script>
+    {% endif %}
+  </body>
+</html>
