--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,11 +22,10 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        {% if site.github.is_project_page %}
+        
         <p class="view"><a href="{{ site.github.owner_url }}">Find me on GitHub <small>{{ site.github.owner_name }}</small></a></p>
-        {% endif %}
-
-         <p class="view"><a href="{{ site.likedin_name }}">Find me on Linkedin <small>Shanique Richards</small></a></p>
+       
+         <p class="view"><a href="www.linkedin.com/in/shanique-richards">Find me on Linkedin <small>Shanique Richards</small></a></p>
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
@@ -42,9 +41,9 @@
 
       </section>
       <footer>
-        {% if site.github.is_project_page %}
+       
         <p>This site is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
+       
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
