--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,11 +22,9 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">Find me on GitHub <small>{{ site.github.owner_name }}</small></a></p>
-        {% endif %}
+       <p class="view"><a href="{{ site.github.owner_url }}">Find me on GitHub <small>{{ site.github.owner_name }}</small></a></p>
        
-       <p class="view"><a href="">Find me on Linkedin <small>Shanique Richards</small></a></p>
+       <p class="view"><a href="www.linkedin.com/in/shanique-richards">Find me on Linkedin <small>Shanique Richards</small></a></p>
 
         
         </header>
