--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,6 +25,8 @@
        <p class="view"><a href="{{ site.github.owner_url }}">Find me on GitHub <small>{{ site.github.owner_name }}</small></a></p>
        
        <p class="view"><a href="www.linkedin.com/in/shanique-richards">Find me on Linkedin <small>Shanique Richards</small></a></p>
+        
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
 
         
         </header>
